stderr
PrinterTest.java:11: error: ';' expected
        printer.printNumberResult(2, this.display)
                                                  ^
1 error
